# Simulation

./: .CMakeLists.txt.swp  CMakeLists.txt  action.cpp  action.h  construction.cpp  construction.h  detector.cpp  detector.h  event.cpp  event.h  generator.cpp  generator.h  main.cpp  physics.cpp  physics.h  run.cpp  run.h  stepping.cpp  stepping.h
DecayFileGenerator/: ModifyDaughterFile.ipynb  ModifyParentFile.ipynb  WidthFileGenerator.ipynb
DecayFileGenerator/ModifiedDecayFiles/: z2.a5  z3.a8  z4.a8
DecayFileGenerator/WidthFiles/: z2WIDTH.a5  z3WIDTH.a8  z4WIDTH.a8
Fynboplotter/: 2dhist.ipynb  CMakeLists.txt  fynbo9670txt.txt  fynbotxt.txt  main.cpp
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  sim  vis.mac
